--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
   <body>
 <h1> Welcome </h1>
+<img src="https://avatars.githubusercontent.com/u/81433705?v=4">
     Hello there, awesome person! 
   </body>
 </html>
