--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 <h1> Welcome </h1>
 <img src="https://avatars.githubusercontent.com/u/81433705?v=4">
     Hello there, awesome person! 
+<ol>
+    <li>wikipedia</li>
+    <li>W3 Schools</li>
+    <li>Wes bos videos </li>
+</ol>
   </body>
 </html>
