--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <img src="https://avatars.githubusercontent.com/u/81433705?v=4">
     Hello there, awesome person! 
 <ol>
-    <li>wikipedia</li>
-    <li>W3 Schools</li>
-    <li>Wes bos videos </li>
+    <li><a href="https://www.wikipedia.org/">wikipedia</a></li>
+    <li><a href="https://www.w3schools.com">W3 Schools</a></li>
+    <li><a href="https://wesbos.com">Wes bos videos</a> </li>
 </ol>
   </body>
 </html>
